# modbus_switch

./: CMakeLists.txt  LICENSE  Makefile  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  component.mk  modbus_switch_main.c  wifi_handler.c  wifi_handler.h
main/adapters/: configuration_adapter.c  configuration_adapter.h  switch_adapter.c  switch_adapter.h
main/servers/: index.html  modbus_tcp_server.c  modbus_tcp_server.h  web_server.c  web_server.h  web_server_cfg_service.c  web_server_cfg_service.h  web_server_fota_service.c  web_server_fota_service.h
